examples/napi/tests/build_error_tests/external_ref_mutability.stderr
error[E0277]: the trait bound `ExternalRef<u32>: DerefMut` is not satisfied
 --> tests/build_error_tests/external_ref_mutability.rs:8:22
  |
8 |   assert_deref_mut::<ExternalRef<u32>>();
  |                      ^^^^^^^^^^^^^^^^ the trait `DerefMut` is not implemented for `ExternalRef<u32>`
  |
note: required by a bound in `assert_deref_mut`
 --> tests/build_error_tests/external_ref_mutability.rs:5:24
  |
5 | fn assert_deref_mut<T: DerefMut<Target = u32>>() {}
  |                        ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_deref_mut`
